[project]
name = "diffusion-model-2d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.1",
    "tensorboard>=2.15.0",
    "scikit-learn>=1.8.0",
    "numba>=0.61.0",
    "matplotlib>=3.10.8",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = ["pre-commit>=4.0.0", "pytest>=8.0.0", "ruff>=0.8.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["diffusion_model_2d*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
# Use double quotes for strings (black default)
quote-style = "double"
# Indent with spaces (black default)
indent-style = "space"
# Respect magic trailing commas (black default)
skip-magic-trailing-comma = false
# Automatically detect line ending
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type checking)
]
ignore = []

[tool.ruff.lint.isort]
# Group imports like isort with black profile
combine-as-imports = true
force-single-line = false
known-first-party = ["diffusion_model_2d"]

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["ANN"] # Ignore annotation rules in test files
"test_*.py" = ["ANN"] # Ignore annotation rules in test files
